<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_wave__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/contanova"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue"
                android:text="Vamos escoher uma foto?"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_person_24"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue"
                android:text="@string/da"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue"
                android:text="@string/info"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/editPassword"
                app:layout_constraintTop_toBottomOf="@+id/editPassword" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/editEmail"
                app:layout_constraintStart_toStartOf="@+id/editEmail"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/cidade"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editName"
                app:layout_constraintStart_toStartOf="@+id/editName"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <EditText
                android:id="@+id/editBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/aniversario"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@+id/editCity"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editCity"
                app:layout_constraintTop_toBottomOf="@+id/editCity" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/levelgamer"
                android:textColor="@color/black_opacity"
                app:layout_constraintStart_toStartOf="@+id/editBirthday"
                app:layout_constraintTop_toBottomOf="@+id/editBirthday" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="5"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"></com.google.android.material.slider.Slider>

            <TextView
                android:id="@+id/enum_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/blue_secondary"
                app:layout_constraintBottom_toBottomOf="@+id/slider"
                app:layout_constraintEnd_toEndOf="@+id/editBirthday"
                app:layout_constraintHorizontal_bias="0.308"
                app:layout_constraintStart_toEndOf="@+id/slider"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.466" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/console"
                android:textColor="@color/black_opacity"
                app:layout_constraintStart_toStartOf="@+id/slider"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/dropdown"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@+id/editBirthday"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sexo"
                android:textColor="@color/black_opacity"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <RadioButton
                    android:id="@+id/F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/feminino" />

                <RadioButton
                    android:id="@+id/M"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/masculino" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>